--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.5.2",
     "axios": "^0.19.2",
     "echarts": "^4.8.0",
+    "jsencrypt": "^3.0.0-rc.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
