--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.2",
     "default-passive-events": "^2.0.0",
     "echarts": "^4.8.0",
+    "http-proxy-middleware": "^1.0.5",
     "jsencrypt": "^3.0.0-rc.1",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
